# ATSE

./: .gitignore  bab.ipynb  babcopy.ipynb  count_step_folders.py  demo.ipynb  demonils.py  extraction_data.py  extraction_data_blobs.py  extraction_data_circles.py  extraction_data_classification.py  extraction_data_gaussian.py  extraction_data_moons.py  gnn_stepdepth_0802.pkl  gout  inspect_relu_status.py  main_test.py  model.pkl  print_test_data.py  pyproject.toml  setup.py  stepdepth_0802_(-1,1).pkl  stepdepth_0802_(gauss).pkl  stepdepth_0802_nD.pkl  strong_branching_nn.pt  strong_branching_nn2.pt  strong_branching_nn3.pt  strong_branching_nn4.pt  strong_branching_nn5.pt  strong_branching_nn6.pt  test_extraction_data.py  test_inputs_size.py  test_weights_size.py  testthedataset.py  trace_graph.ipynb  train_all.sh  train_strong_branching_nn.py
RL/: bab_rl.py  env.py  rLearning.py
gnn_depth/: gnn_stepdepth.py  strong_branching_nn_eval.pt
micrograd/: branch_and_bound.py  computegraph.py  engine.py  helpers.py  ibp.py  nn.py  planet.py
models/: model_blobs_1.pkl  model_blobs_10.pkl  model_blobs_11.pkl  model_blobs_12.pkl  model_blobs_13.pkl  model_blobs_14.pkl  model_blobs_15.pkl  model_blobs_2.pkl  model_blobs_3.pkl  model_blobs_4.pkl  model_blobs_5.pkl  model_blobs_6.pkl  model_blobs_7.pkl  model_blobs_8.pkl  model_blobs_9.pkl  model_circles_1.pkl  model_circles_10.pkl  model_circles_11.pkl  model_circles_12.pkl  model_circles_13.pkl  model_circles_14.pkl  model_circles_15.pkl  model_circles_2.pkl  model_circles_3.pkl  model_circles_4.pkl  model_circles_5.pkl  (+49 more)
(+34 files in other folders)
