[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "learned-branching-micrograd"
version = "0.0.1"
dependencies = [
    "cvxpy == 1.6.6",
    "numpy == 2.3.0",
    "matplotlib == 3.10.3",
    "scikit-learn == 1.7.0",
    "graphviz == 0.20.3",
]
requires-python = ">= 3.12"
