[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "micrograd"
version = "0.0.1"
description = "Branch and Bound Verification with Learned Branching for Micrograd"
dependencies = [
    "cvxpy == 1.6.6",
    "numpy == 2.3.0",
    "matplotlib == 3.10.3",
    "scikit-learn == 1.7.0",
    "graphviz == 0.20.3",
    "tqdm >= 4.0",
    "torch >= 2.0.0",
    "torchvision >= 0.15.0",
    "torchaudio >= 2.0.0",
    "torch-geometric >= 2.5.0"
]
requires-python = ">= 3.12"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]